Some typos and day 23

--- a/_posts/2024-09-01-moving.markdown
+++ b/_posts/2024-09-01-moving.markdown
@@ -9,15 +9,16 @@ categories: jekyll update
 
 Hey!
 
-Today I started moving to a new place within my country, so I will not be able to code for a while (expected 2 weeks, tops),
+Today I started moving to a new place within my country, so I will not be able to code for a while (expected 2 weeks),
 this makes me a bit anxious about losing habits and knowledge, but I hope I get back soon and will be back at it.
+
 
 Can't wait to start again!
 
 
 I also want to take advantage of this and share a little bit of my music taste. I love sum 41 since my early teens
-(I'm 25 at the time of writing) and soon enough I will be attending to may be one of the last concert from this band 
-here in Spain, since they announced their disbandment/retirement earlier this year.
+(I'm 25 at the time of writing) and soon enough I will be attending to may be one of the last concert from this band
+since they announced their disbandment/retirement earlier this year.
 
 So here it's one of their songs from the latest setlist* I could find online. Enjoy!
 
