--- a/_posts/2024-10-25-Day-32-Keeping.markdown
+++ b/_posts/2024-10-25-Day-32-Keeping.markdown
@@ -1,6 +1,6 @@
 ---
 layout: post
-title:  "Day 32 - Keeping the pace is actually hard"
+title:  "Day 32 to 39 - Keeping the pace"
 date:   2024-11-03 17:20:00 +0200
 categories: jekyll update
 ---
