--- a/_posts/2025-01-10-New-year.md
+++ b/_posts/2025-01-10-New-year.md
@@ -7,4 +7,172 @@ categories: jekyll update
 
 ![custom header](https://raw.githubusercontent.com/Akirapearl/jekyll_blog/main/assets/images/maik-jonietz.jpg)
 
-#### Day 50 - Half way through!! - /01/2025
+#### Day 50 - Half way through!! - 10/01/2025
+
+To start off the year officially, and with all my previous steps/projects already finished, I am now learning how to code a MySQL CRUD API. For this task I am also using the local Debian 12 VM I did set up for the database connection tutorial.
+
+Here it is my current initial code:
+
+```go
+package main
+
+
+import (
+
+"database/sql"
+"log"
+"net/http"
+
+"github.com/go-sql-driver/mysql"
+
+)
+
+type Album struct {
+
+	ID int
+	Title string
+	Artist string
+	Price float32
+}
+
+func main() {
+
+	cfg := mysql.Config{
+
+		User: "mysqlu", //This value were hardcoded 
+		Passwd: "pwd", // this one too
+		User: os.Getenv("DBUSER"),
+		Passwd: os.Getenv("DBPASS"),
+		Net: "tcp",
+		Addr: "192.168.1.134:3306",
+		DBName: "MUSIC",
+
+	}
+
+	r := http.NewServeMux()
+	r.HandleFunc("GET /albums", getAlbums)
+	log.Print("Starting server on port :8080...")
+	log.Fatal(http.ListenAndServe(":8090", r))
+}
+
+  
+
+func getAlbums(w http.ResponseWriter, r *http.Request) {
+
+	// Get a database Handle -- Initialize DB connection
+
+	db, err := sql.Open("mysql", cfg.FormatDSN())
+	if err != nil {
+	log.Fatal(err)
+	}
+
+}
+```
+
+#### Day 51 - 12/01/2025 && 14/01/2025
+
+More methods! I got the Read method for my CRUD API done as well as the Create one! Here are the functions isolated. [Wanna check the code?](https://github.com/Akirapearl/myweatherapi)
+
+```go
+func getAlbums(db *sql.DB) http.HandlerFunc {
+	return func(w http.ResponseWriter, r *http.Request) {
+		var albums []Album
+		rows, err := db.Query("SELECT * FROM Albums")
+		if err != nil {
+			http.Error(w, err.Error(), http.StatusInternalServerError)
+			return
+		}
+		defer rows.Close()
+
+		for rows.Next() {
+			var alb Album
+			if err := rows.Scan(&alb.ID, &alb.Title, &alb.Artist, &alb.Price); err != nil {
+				http.Error(w, err.Error(), http.StatusInternalServerError)
+				return
+			}
+			albums = append(albums, alb)
+		}
+
+		if err := rows.Err(); err != nil {
+			http.Error(w, err.Error(), http.StatusInternalServerError)
+			return
+		}
+
+		w.Header().Set("Content-Type", "application/json")
+		if len(albums) > 0 {
+			if err := json.NewEncoder(w).Encode(albums); err != nil {
+				http.Error(w, err.Error(), http.StatusInternalServerError)
+			}
+		} else {
+			w.Write([]byte("No albums found"))
+		}
+	}
+}
+
+func addAlbum(db *sql.DB) http.HandlerFunc {
+	return func(w http.ResponseWriter, r *http.Request) {
+		var alb Album
+		err := json.NewDecoder(r.Body).Decode(&alb)
+		if err != nil {
+			http.Error(w, err.Error(), http.StatusBadRequest)
+			return
+		}
+		result, err := db.Exec("INSERT into Albums VALUES ((select max(ID)+1 from Albums a),?, ?, ?);", alb.Title, alb.Artist, alb.Price)
+		if err != nil {
+			http.Error(w, err.Error(), http.StatusInternalServerError)
+		}
+
+		id, err := result.LastInsertId()
+		if err != nil {
+			http.Error(w, err.Error(), http.StatusInternalServerError)
+			return
+		}
+
+		alb.ID = int(id)
+		json.NewEncoder(w).Encode(alb)
+	}
+}
+
+/*
+curl http://localhost:8090/albums/add \
+    --include \
+    --header "Content-Type: application/json" \
+    --request "POST" \
+    --data '{"Title": "The Modern Sound of Betty Carter","Artist": "Betty Carter","Price": 49.99}'
+
+*/
+```
+
+#### Day 52 - 16/01/2025
+
+More functionality for the API! This time, I implemented (and tested) the Update method, as of now it went pretty much as reviewing other API examples and imitating the Insert function from before.
+
+```go
+func updateAlbum(db *sql.DB) http.HandlerFunc {
+	return func(w http.ResponseWriter, r *http.Request) {
+		var alb Album
+		err := json.NewDecoder(r.Body).Decode(&alb)
+		if err != nil {
+			http.Error(w, err.Error(), http.StatusBadRequest)
+			return
+		}
+		_, err = db.Exec("UPDATE Albums SET Title = ? WHERE ID = ?", alb.Title, alb.ID)
+		if err != nil {
+			http.Error(w, err.Error(), http.StatusInternalServerError)
+			return
+		}
+	}
+}
+
+/*
+curl http://localhost:8090/albums/update \
+    --include \
+    --header "Content-Type: application/json" \
+    --request "PUT" \
+    --data '{"ID" : 9,"Title": "Test"}'
+
+*/
+
+```
+
+The expected behavior is to parse the curl request with a JSON body and take the values as arguments for the UPDATE statement.
