--- a/_posts/2025-01-10-New-year.md
+++ b/_posts/2025-01-10-New-year.md
@@ -176,3 +176,36 @@ curl http://localhost:8090/albums/update \
 ```
 
 The expected behavior is to parse the curl request with a JSON body and take the values as arguments for the UPDATE statement.
+
+#### Day 53 - 17/01/2025
+
+Making the last basic functionality for the CRUD API has been more complex, at first I expected it to be really similar to the UPDATE method, but for the DELETE one, it required me to check about HTTP methods and other MySQL APIs workarounds, yet I ended up asking to the community and here it is the end up result:
+
+```go
+func deleteAlbum(db *sql.DB) http.HandlerFunc {
+	return func(w http.ResponseWriter, r *http.Request) {
+		var alb Album
+		err := json.NewDecoder(r.Body).Decode(&alb)
+		if err != nil {
+			http.Error(w, err.Error(), http.StatusBadRequest)
+			return
+		}
+		_, err = db.Exec("DELETE FROM Albums WHERE ID = ?", alb.ID)
+		if err != nil {
+			http.Error(w, err.Error(), http.StatusInternalServerError)
+			return
+		}
+		w.WriteHeader(http.StatusNoContent)
+	}
+}
+
+/*
+  -- REQUIRES TO AVOID ESCAPING LINES
+	curl -X DELETE http://localhost:8090/albums/delete -H "Content-Type: application/json" -d '{"ID" : 8}'
+*/
+```
+
+It is worth mentioning that it took quite some time to make this work, because of a rather funny (or exhausting) mistake, since the new lines were escaped, it didn't interpret the instruction 
+properly, once it was placed on a single line, the curl command worked.
+
+Overall I know that this is a pretty basic API, I could add more specific INSERT statements as well as UPDATE or DELETE ones, so I prefer to pivot into a new project, or rather a new approach to the same one.
