--- a/_posts/2025-01-10-New-year.md
+++ b/_posts/2025-01-10-New-year.md
@@ -209,3 +209,32 @@ It is worth mentioning that it took quite some time to make this work, because o
 properly, once it was placed on a single line, the curl command worked.
 
 Overall I know that this is a pretty basic API, I could add more specific INSERT statements as well as UPDATE or DELETE ones, so I prefer to pivot into a new project, or rather a new approach to the same one.
+
+#### Days 54 - 55 - 56 - 18/01/2025 - 22/01/2025 - 30/01/2025
+
+After spending time coding and finishing some projects, I've been investing the last two week (Just pointing three days because is a rather more justified and not unfair way to show how much time I've spent on this) looking around for which project to commit to next, for which I stumbled upon htmx and website projects. The core idea is to develop a mutable html file with more flexible components, and during this journey, refresh some of my knowledge with web development, may be even expanding to know the basics of a framework such as Tailwind CSS.
+
+In any case, just to not go too far and lose track of the scale of this project, I will stick as much as I can to a project concept and keep things simple aesthetic-wise.
+
+Some resources I found & stored along the way:
+
+[Codez Up - Creating a real-time chat application with Golang and Websockets](https://codezup.com/real-time-chat-application-golang-websockets/)
+
+[Medium - Simple chat application with Golang and Websocket](https://polymatx.medium.com/simple-chat-application-with-golang-and-websocket-7eb9791367de)
+
+[Youtube - Generic search for chat application with Golang](https://www.youtube.com/results?search_query=Chat+Application+%28WebSocket-based%29+golang)
+
+[Package main - Youtube channel](https://www.youtube.com/@packagemain/videos)
+
+Alongside other go-related yet just for curiosity articles
+[Go tool - Go version 1,24](https://www.jvt.me/posts/2025/01/27/go-tools-124/)
+#### Day 57 - 05/02/2025
+
+Today I took a breather of preparing my next project and went ahead about finishing the App Engine introductory labs for Google Cloud, this is of importance to me since one of them included the Golang language, so I could refresh how to deploy and use the GCP component in on itself.
+
+[Source](https://www.cloudskillsboost.google/course_templates/671?catalog_rank=%7B%22rank%22%3A56%2C%22num_filters%22%3A1%2C%22has_search%22%3Afalse%7D)
+
+On the other hand, I was also able to finish the initial setup for my local proxmox server to be remotely managed via Ansible.
+
+![Terminal Ansible screenshot](https://raw.githubusercontent.com/Akirapearl/jekyll_blog/main/assets/images/ansible_ping.png)
+
