--- a/_posts/2025-01-10-New-year.md
+++ b/_posts/2025-01-10-New-year.md
@@ -227,14 +227,127 @@ Some resources I found & stored along the way:
 [Package main - Youtube channel](https://www.youtube.com/@packagemain/videos)
 
 Alongside other go-related yet just for curiosity articles
+
 [Go tool - Go version 1,24](https://www.jvt.me/posts/2025/01/27/go-tools-124/)
 #### Day 57 - 05/02/2025
 
-Today I took a breather of preparing my next project and went ahead about finishing the App Engine introductory labs for Google Cloud, this is of importance to me since one of them included the Golang language, so I could refresh how to deploy and use the GCP component in on itself.
+Today I took a breather of preparing my next project and went ahead about finishing the App Engine introductory labs for Google Cloud, this is of importance to me since one of them included the Golang language, which could lead for future options of deploying microservicies on a cloud provider. This also helped to refresh how to use the GCP component in on itself.
 
 [Source](https://www.cloudskillsboost.google/course_templates/671?catalog_rank=%7B%22rank%22%3A56%2C%22num_filters%22%3A1%2C%22has_search%22%3Afalse%7D)
 
-On the other hand, I was also able to finish the initial setup for my local proxmox server to be remotely managed via Ansible.
+On the other hand, I was also able to finish the initial setup for my local proxmox server to be remotely managed via Ansible. Also deployed a simple Rocky Linux server with Docker and Portainer onto it.
 
 ![Terminal Ansible screenshot](https://raw.githubusercontent.com/Akirapearl/jekyll_blog/main/assets/images/ansible_ping.png)
+
+#### Day 58 && 59 - 10/02/2025 && 15/02/2025
+
+Today I took a turn over...yet again. This time I totally ditched the idea of a chat application (for now), but, as of today, the idea is still to learn about Golang alongside Htmx for its webdev capabilities. More specifically I am planning onto taking advantage of my current Backend API and prepare a simple frontend so, once I get everything done, I could create a fully functional microservice environment with three containers or Apps separated from one another (Backend service, Frontend site and Database).
+
+[New repository.](https://github.com/Akirapearl/frontapi-core) 
+
+Here are some more resources I've found for the development of this frontend part.
+
+[Why HTMX and Golang?](https://youtu.be/8z8VrlVOIyM?si=EkXZanYzjdu9ZoJm)
+
+[GoTH Stack - Go, HTMX & Templ](https://youtu.be/mzR0BcKg2cI?si=qdHOd3ftkwFpaw7M)
+
+[Get Started With Golang Echo + HTMX](https://youtu.be/DdrGLWAGgWQ?si=ls1pu6ISkLU4ENwa)
+
+[GOAT Stack](https://www.youtube.com/watch?v=cgPAkEcd2KM)
+
+#### Day 60 - 61 - 62 - 22/02/2025 - 2/03/2025 - 09/03/2025
+
+Keeping things straight, today I've started learning [Templ](https://templ.guide/) as it is a requirement for the stack I'm aiming for. Even so, I have a base site with some tests I've made with a functional template-like workflow.
+
+I continued moving around and at some point started mixing things up, thing is, Templs is just one of the multiple options to work with templates, and at the time of writing I was mixing text/template package from Go's default library and Templs possibilities within a scoped project that aimed to learn about Templ all at once, given that I was wrongly understanding my progress, I wiped the project idea, with a single technology in mind, might not be as fancy as Templ, but it is included within Go by default and should make things easier.
+
+I'm talking about html/template package. [Source](https://pkg.go.dev/html/template)
+
+Now I will keep on learning more about its possibilities and how to implement HTMX within it. After some time, I got a simple operational state that gets me a simple map being displayed only if I press a certain button.
+
+Current Go code:
+```go
+package main
+
+import (
+	"fmt"
+	"html/template"
+	"log"
+	"net/http"
+)
+
+type Disc struct {
+	Title string
+	Group string
+}
+
+func main() {
+	fmt.Println("Hi")
+	// Initial page load
+	http.HandleFunc("/", func(w http.ResponseWriter, r *http.Request) {
+		tmpl := template.Must(template.ParseFiles("index.html"))
+		// Initial data (empty or nil)
+		tmpl.Execute(w, nil)
+	})
+
+	// Handler for HTMX read request
+	http.HandleFunc("/read/", func(w http.ResponseWriter, r *http.Request) {
+		tmpl := template.Must(template.ParseFiles("index.html"))
+		// Fetch data (replace with database call)
+		data := getDiscsFromDB()
+		// Render only the partial template
+		tmpl.ExecuteTemplate(w, "discs-partial", data)
+	})
+
+	log.Fatal(http.ListenAndServe(":8080", nil))
+}
+
+// Simulate database fetch
+func getDiscsFromDB() map[string][]Disc {
+	return map[string][]Disc{
+		"Discs": {
+			{Title: "From Zero", Group: "Linkin Park"},
+			{Title: "Scoring the End of the World", Group: "Motionless in White"},
+		},
+	}
+}
+
+```
+
+Current index.html code:
+```html
+<!DOCTYPE html>
+<html lang="en">
+    <head>
+        <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <script src="https://unpkg.com/@tailwindcss/browser@4"></script>
+        <script src="https://unpkg.com/htmx.org@1.9.6"></script>
+        <title>Document</title>
+    </head>
+<body>
+    <button class="flex-1 bg-green-500 text-white py-2 px-4 hover:bg-green-600" 
+            hx-get="/read/" 
+            hx-target="#discs-container">
+        Read
+    </button>
+    
+    <div id="discs-container">
+        {{ template "discs-partial" . }}
+    </div>
+</body>
+</html>
+
+{{ define "discs-partial" }}
+    {{ if .Discs }}
+        {{ range .Discs }}
+            <div>{{ .Title }} by {{ .Group }}</div>
+        {{ end }}
+    {{ else }}
+        <div>No discs to display. Click "Read" to load.</div>
+    {{ end }}
+{{ end }}
+
+```
+
 
