--- a/_posts/2025-01-10-New-year.md
+++ b/_posts/2025-01-10-New-year.md
@@ -350,4 +350,15 @@ Current index.html code:
 
 ```
 
+#### Day 63 - 64 - 17/03/2025 - 19/03/2025
+
+Today I got a bit of a rough start, as I intended to implement a bit of a "Create" button, that should show a form, in order to perform the insert method over the database once it is submitted.
+
+Now, to be clear, What do I want to do in the first place?:
+	- Show "Create" and "Read" buttons at first time that the page loads
+	- Once the Create button is clicked, clean the view and show a form to allow the user to insert data into the DB.
+	- Once the Read button is clicked, clean the view and show the content of the DB.
+
+I've not even reached the backend call yet, as my main goal is to prepare the frontend aspect of this API, given that once the first form shows just fine as intended, I'll just need to tune the HTML part to adapt to the other two methods.
+
 
